--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.0.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^10.12.16",
+    "howler": "^2.2.3",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -45,6 +49,7 @@
   "devDependencies": {
     "@types/dom-to-image": "^2.6.4",
     "@types/file-saver": "^2.0.5",
+    "@types/howler": "^2.2.7",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
